--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
 	"permissions": ["browsingData", "storage", "tabs"],
 	
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": ["persistence.js", "background.js"]
 	},
 
 	"browser_action": {
@@ -38,6 +38,6 @@
 	],
 
 	"options_ui": {
-		"page": "editor.html"
+		"page": "options.html"
 	}
 }
