--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"manifest_version": 2,
 	"name": "jsloader",
 	"version": "1.0",
-
+	
 	"applications": {
 		"gecko": {
 			"id": "jsloader@something.com",
@@ -29,8 +29,8 @@
 	"browser_action": {
 		"browser_style": true,
 		"default_icon": {
-			"16": "icons/Diskette_16.png",
-			"32": "icons/Diskette_32.png"
+			"16": "fg/icons/Diskette_16.png",
+			"32": "fg/icons/Diskette_32.png"
 		},
 
 		"default_popup": "fg/browser_action/ba.html"
@@ -39,7 +39,9 @@
 	"content_scripts": [
 		{
 			"matches": ["*://*/*"],
-			"js": ["fg/deps/jquery.min.js", "bg/content_script.js"]
+			"js": ["fg/deps/jquery.min.js", "bg/content_script.js"],
+			"all_frames": true,
+			"run_at": "document_start"
 		}
 	],
 
@@ -70,6 +72,6 @@
 
 	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
 
-	"permissions": ["storage", "tabs"]
+	"permissions": ["storage", "tabs", "notifications", "<all_urls>"]
 
 }
