--- a/manifest.json
+++ b/manifest.json
@@ -72,7 +72,7 @@
 		}
 	},
 
-	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
+	"content_security_policy": "script-src 'self' * 'unsafe-eval'; object-src 'self';",
 	
 	"permissions": [ "storage", "tabs", "notifications", "<all_urls>", "downloads" ]
 	
