--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
 	"applications": {
 		"gecko": {
 			"id": "{7c7674e3-ec49-472b-8bab-5c981aa3cc94}",
-			"strict_min_version": "42.0",
-			"strict_max_version": "55.*"
+			"strict_min_version": "42.0"
 		}
     },
 	
@@ -40,7 +39,7 @@
 
 	"content_scripts": [
 		{
-			"matches": ["*://*/*"],
+			"matches": ["*://*/*", "<all_urls>"],
 			"js": ["fg/deps/jquery.min.js", "bg/content_script.js"],
 			"all_frames": true,
 			"run_at": "document_start"
@@ -72,8 +71,8 @@
 		}
 	},
 
-	"content_security_policy": "script-src 'self' * 'unsafe-eval'; object-src 'self';",
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
 	
-	"permissions": [ "storage", "tabs", "notifications", "<all_urls>", "downloads" ]
+	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads" ]
 	
 }
