Scripts are duplicated at some point ..¿?

--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
 	
 	"background": {
 		"scripts": [
+			"utils/deps/EventEmitter/EventEmitter.min.js",
 			"utils/deps/async.min.js",
 			"utils/deps/underscore-min.js",
 			"utils/jsloader-utils.js",
@@ -52,7 +53,7 @@
 	"content_scripts": [
 		{
 			"matches": ["*://*/*", "<all_urls>"],
-			"js": ["fg/deps/jquery.min.js", "utils/deps/async.min.js", "utils/deps/underscore-min.js", "utils/jsloader-utils.js", "bg/content_api.js", "bg/content_script.js"],
+			"js": ["fg/deps/jquery.min.js", "utils/deps/async.min.js", "utils/deps/underscore-min.js", "utils/jsloader-utils.js", "bg/content_api.js", "utils/deps/EventEmitter/EventEmitter.min.js", "bg/content_script.js"],
 			"all_frames": true,
 			"run_at": "document_start"
 		}
