--- a/manifest.json
+++ b/manifest.json
@@ -83,12 +83,10 @@
 			},
 			"description": "Create new group, ¿adds the current site? and binds a new script."
 		}
-
-		
 	},
 
 	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
 	
-	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads" ]
+	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads", "contextMenus" ]
 	
 }
