--- a/manifest.json
+++ b/manifest.json
@@ -55,7 +55,16 @@
 	"content_scripts": [
 		{
 			"matches": ["*://*/*", "<all_urls>"],
-			"js": ["fg/deps/jquery.min.js", "utils/deps/async.min.js", "utils/deps/underscore-min.js", "utils/jsloader-utils.js", "bg/content_api.js", "utils/deps/EventEmitter/EventEmitter.min.js", "bg/content_script.js"],
+			"js": [
+				"fg/deps/jquery.min.js",
+				"utils/deps/async.min.js",
+				"utils/deps/underscore-min.js",
+				"utils/jsloader-utils.js",
+				"bg/content_api.js",
+				"utils/deps/EventEmitter/EventEmitter.min.js",
+				"bg/content_script.js"
+			],
+			
 			"all_frames": true,
 			"run_at": "document_start"
 		}
