--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,7 @@
 			"bg/group_mgr.js",
 			"bg/notify_mgr.js",
 			"bg/logs_mgr.js",
+			"bg/rules_mgr.js",
 			"bg/tabs_mgr.js",
 			"bg/content_mgr.js",
 			"bg/background.js"]
@@ -105,6 +106,6 @@
 
 	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
 	
-	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads", "contextMenus", "activeTab", "webRequest", "webRequestBlocking" ]
+	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads", "contextMenus", "activeTab", "webRequest", "webRequestBlocking", "proxy" ]
 	
 }
