--- a/build
+++ b/build
@@ -1,4 +1,12 @@
 #!/bin/bash
 
 #./node_modules/.bin/webpack --config webpack.config.js
+
+if [ ! -d "/usr/lib/mozilla/native-messaging-hosts/" ]; then
+	sudo mkdir -p /usr/lib/mozilla/native-messaging-hosts/
+fi
+
+sudo cp native-app/db_connector.json /usr/lib/mozilla/native-messaging-hosts/db_connector.json
+sudo cp native-app/db_connector.py /usr/lib/mozilla/native-messaging-hosts/db_connector.py
+
 zip -r jsload.xpi *
