Unhandled errors mgr in content script.

--- a/manifest.json
+++ b/manifest.json
@@ -62,6 +62,7 @@
 				"fg/deps/jquery.min.js",
 				"utils/deps/async.min.js",
 				"utils/deps/underscore-min.js",
+				"utils/deps/bluebird.min.js",
 				"utils/jsloader-utils.js",
 				"utils/deps/EventEmitter/EventEmitter.min.js",
 				"bg/content_api.js",
