--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
 			"bg/data_model.js",
 			"bg/persistence.js",
 			"bg/editor_mgr.js",
-			"bg/cache_mgr.js",
+			"bg/_data_mgr.js",
 			"bg/domain_mgr.js",
 			"bg/option_mgr.js",
 			"bg/group_mgr.js",
