--- a/manifest.json
+++ b/manifest.json
@@ -106,7 +106,7 @@
 		}
 	},
 
-	"content_security_policy": "script-src * 'self' 'unsafe-eval'; object-src 'self'; img-src 'self'",
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'; img-src 'self'",
 	
 	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads", "contextMenus", "activeTab", "webRequest", "webRequestBlocking", "proxy", "nativeMessaging" ]
 	
