--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,7 @@
 			"bg/group_mgr.js",
 			"bg/notify_mgr.js",
 			"bg/tabs_mgr.js",
+			"bg/resource_mgr.js",
 			"bg/content_mgr.js",
 			"bg/background.js"
 		]
