--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-#./node_modules/.bin/webpack --config webpack.config.js
+rm -f jsload-unsigned.xpi
 
 if [ ! -d "/usr/lib/mozilla/native-messaging-hosts/" ]; then
 	sudo mkdir -p /usr/lib/mozilla/native-messaging-hosts/
