Registering the add on

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 	
 	"applications": {
 		"gecko": {
-			"id": "jsloader@afinehosttoget.com",
+			"id": "santiaguzz@gmail.com",
 			"strict_min_version": "42.0"
 		}
     },
