--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,6 @@
 	"name": "jsloader",
 	"version": "1.2",
 	
-	"applications": {
-		"gecko": {
-			"id": "santiaguzz@gmail.com",
-			"strict_min_version": "42.0"
-		}
-    },
-	
 	"background": {
 		"scripts": [
 			"utils/deps/EventEmitter/EventEmitter.min.js",
@@ -63,7 +56,7 @@
 	],
 	
 	"options_ui": {
-		"browser_style": true,
+		"chrome_style": true,
 		"open_in_tab": true,
 		"page": "fg/opt_page/options.html"
 	},
