--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"description": "Store JS scripts to be run for a given site",
 	"manifest_version": 2,
 	"name": "jsloader",
-	"version": "1.3",
+	"version": "1.4",
 	
 	"applications": {
 		"gecko": {
@@ -71,25 +71,19 @@
 	"commands": {
 		"add-script-for-tab": {
 			"suggested_key": {
-				"linux": "Alt+Shift+1"
+				"default": "Alt+Shift+1"
 			},
-			"description": "Open a new editor window, binded to the current tab."
+			"description": "Open a new editor window, binded to the current focused tab."
 		},
 		"new-group-new-script": {
 			"suggested_key": {
-				"linux": "Alt+Shift+2"
+				"default": "Alt+Shift+2"
 			},
-			"description": "Create new group, ¿adds the current site? and binds a new script."
+			"description": "Create new group, and binds a new script."
 		},
 		"open-option-page": {
 			"suggested_key": {
-				"linux": "Alt+Shift+O"
-			},
-			"description": "Shows configuration menu."
-		},
-		"open-option-page-devel": {
-			"suggested_key": {
-				"linux": "Alt+Shift+Q"
+				"default": "Alt+Shift+Q"
 			},
 			"description": "Shows configuration menu."
 		}
@@ -97,6 +91,6 @@
 
 	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'; img-src 'self'",
 	
-	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads", "contextMenus", "activeTab", "webRequest", "webRequestBlocking", "proxy", "nativeMessaging" ]
+	"permissions": [ "storage", "tabs", "cookies", "notifications", "<all_urls>", "downloads", "activeTab", "proxy", "nativeMessaging" ]
 	
 }
